# HarmoniQ

./: .cache.sqlite  .gitignore  CONTRIBUTING.md  README.md  exec_harmoniQ.sh
harmoniQ/: pyproject.toml
harmoniQ/harmoniq/: .gitignore  __init__.py
harmoniQ/harmoniq/core/: base.py  meteo.py
harmoniQ/harmoniq/db/: CRUD.py  __init__.py  engine.py  schemas.py
harmoniQ/harmoniq/db/CSVs/: Info_Barrages.csv  buses.csv  buses_old.csv  lines.csv  lines_old.csv
harmoniQ/harmoniq/modules/eolienne/: __init__.py  calcule.py
harmoniQ/harmoniq/modules/hydro/: __init__.py  calcule.py
harmoniQ/harmoniq/modules/reseau/: .gitignore  __init__.py
harmoniQ/harmoniq/modules/reseau/core/: network_builder.py  optimization.py
harmoniQ/harmoniq/modules/reseau/n_cache/demand_cache/: demand_2050_05c78e9c98b2.parquet  demand_2050_0f42844093eb.parquet  demand_2050_11b23592b035.parquet  demand_2050_3305a58e27fe.parquet  (+13 more)
harmoniQ/harmoniq/modules/reseau/utils/: data_loader.py  energy_utils.py
harmoniQ/harmoniq/modules/solaire/: calculs_production_solaire.py
harmoniQ/harmoniq/profiler/: __init__.py  initializer.py  log.py  profiler.py  timer.py  utils.py
harmoniQ/harmoniq/scripts/: add_indexes.py  init_database.py  lance_webserver.py  load_database.py
harmoniQ/harmoniq/webserver/: REST.py  __init__.py
harmoniQ/harmoniq/webserver/assets/: app.html  index.html  opti.html
harmoniQ/harmoniq/webserver/assets/static/: elo.js  graphiques.js  harmoniq.js  lignes_quebec.csv  opti.js
harmoniQ/tests/: conftest.py  test_app.py  test_init_db.py  test_installation.py  test_meteo.py
(+112 files in other folders)
