[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmoniq"
version = "0.1.0"
description = "Librarie pour l'analyse de production d'énergie de Hydro-Québec"
requires-python = ">=3.8"
authors = [
    {name = "Sébastien Dasys", email = "sebastien.dasys@polymtl.ca"},
    {name = "Alec Mitchell", email = "alec.mitchell@polymtl.ca"},
    # Ajoute ton nom si tu contribues au code
]
dependencies = [
    # Général
    "numpy==1.26.4",
    "urllib3==1.26.6",
    "pandas",
    "pandera",
    "matplotlib",
    "scipy",
    "openpyxl",
    "scipy",
    "openpyxl",
    "isodate",
    # Web app dependencies
    "flask",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    # Ajoute les dépendances nécessaires au fur et à mesure
    # solaire dependencies
    "pvlib",
    # hydro dependencies
    "HydroGenerate",
    "nrel-pysam",
    "windpowerlib",
    "geopandas",
    "env-canada",
    "pypsa",
    "pypsa[hdf5]",
    "pyarrow",
    "fastparquet"
]

[project.scripts]
init-db = "harmoniq.scripts.init_database:main"
load-db = "harmoniq.scripts.load_database:main"
launch-app = "harmoniq.scripts.lance_webserver:main"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "httpx",
    "gdown"
]

[tool.setuptools]
packages = ["harmoniq"]
